[tool.poetry]
name = "rvc-lab"
version = "0.1.0"
description = "rvc lab"
authors = ["Nick Mazurkin <mazurkin@gmail.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.dependencies]
python = "3.10.12"

[tool.poetry.group.fix.dependencies]
matplotlib = "3.7.0"
matplotlib-inline = "0.1.3"
httpx = "0.27.2"

[tool.poetry.group.pytorch.dependencies]
torch = { version = "2.3.1+cu121", source="pytorch"}
torchaudio = { version = "2.3.1+cu121", source="pytorch"}
torchvision = { version = "0.18.1+cu121", source="pytorch"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
